Revert fix gear icons in high contrast

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -126,11 +126,7 @@ body .comment-container.review {
 .icon-button:hover,
 .section .icon-button:hover,
 .section .icon-button:focus {
-	background-color: var(--vscode-button-hoverBackground);
-}
-
-.section .icon-button svg path {
-	fill: var(--vscode-button-foreground);
+	background-color: var(--vscode-toolbar-hoverBackground);
 }
 
 .icon-button:focus,
